# argus

./: README.md  createdb.py  main.py  pyproject.toml
app/: main.py
argus/cli/: __init__.py  cli.py
argus/domain/: __init__.py  arquivo.py  extrator.py
argus/repository/: arquivo.py  extrator.py
argus/tests/: test_createdb.py
argus/tests/domain/: test_arquivo.py  test_extrator.py
argus/tests/repository/: test_arquivo.py
domain/: __init__.py
tests/: test_createdb.py
