[tool.poetry]
name = "seducmon"
version = "0.1.0"
description = "A bunch of scripts to assert if SEDUC selection is calling the candidates honestly."
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
