[tool.poetry]
name = "seducmon"
version = "0.1.0"
description = "A bunch of scripts to assert if SEDUC selection is calling the candidates honestly."
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
sqlmodel = "^0.0.22"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pynvim = "^0.5.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
